# talent_plan

kv/: Cargo.toml  README.md  build.rs  kvdata.txt
kv/src/: client.rs  client_muti.rs  server.rs
kv/src/protos/: lib.rs  mod.rs  mykv.rs  mykv_grpc.rs
kv/src/protos/proto/: mykv.proto
