[package]
name = "kv"
version = "0.1.0"
authors = ["hhs"]
edition = "2018"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client_muti"
path = "src/client_muti.rs"

[dependencies]
futures = "0.1"
grpcio = "0.4"
protobuf = "~2"
rand = "0.5"

[build-dependencies]
protoc-grpcio = "1.0.1"